fixes height on mobile

--- a/styleguide/source/assets/scss/03-organisms/_subcategory-exploration.scss
+++ b/styleguide/source/assets/scss/03-organisms/_subcategory-exploration.scss
@@ -9,7 +9,7 @@
 
   &__list {
     overflow: hidden;
-    height: 65px;
+    height: 60px;
 
     @include breakpoint($bp-small) {
       height: 80px;
